config/network-policy/allow-egress-apiserver.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: kyma-project.io--rt-bootstrapper--allow-egress-to-apiserver
  namespace: kyma-system
  labels:
    app.kubernetes.io/name: rt-bootstrapper
    app.kubernetes.io/managed-by: kustomize
    purpose: apiserver
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: rt-bootstrapper
  policyTypes:
    - Egress
  egress:
    - ports:
        - port: 443
          protocol: TCP
