config/network-policy/allow-ingress-metrics-traffic.yaml
# This NetworkPolicy allows ingress traffic
# with Pods running on namespaces labeled with 'metrics: enabled'. Only Pods on those
# namespaces are able to gather data from the metrics endpoint.
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  labels:
    app.kubernetes.io/name: rt-bootstrapper
    app.kubernetes.io/managed-by: kustomize
  name: kyma-project.io--rt-bootstrapper-allow-metrics-traffic
  namespace: kyma-system
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: rt-bootstrapper
  policyTypes:
    - Ingress
  ingress:
    # This allows ingress traffic from any namespace with the label metrics: enabled
    - from:
      - podSelector:
          matchLabels:
            networking.kyma-project.io/metrics-scraping: allowed
        namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: kyma-system
      ports:
        - port: 8080
          protocol: TCP
