config/network-policy/allow-ingress-webhook-traffic.yaml
# This NetworkPolicy allows ingress traffic to your webhook server running
# as part of the controller-manager from specific namespaces and pods. CR(s) which uses webhooks
# will only work when applied in namespaces labeled with 'webhook: enabled'
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  labels:
    app.kubernetes.io/name: rt-bootstrapper
    app.kubernetes.io/managed-by: kustomize
  name: kyma-project.io--ingress-allow-webhook-traffic
  namespace: kyma-system
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: rt-bootstrapper
  policyTypes:
    - Ingress
  ingress:
    - ports:
        - port: 9443
          protocol: TCP
